--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                 <a href=""><img src="~/img/icon2.png" class="img-fluid ps-1" style="height: 2.6rem; width: 2.9rem;" alt=""></a>
                 <a href=""><img src="~/img/icon3.png" class="img-fluid ps-1" style="height: 2.6rem; width: 2.9rem;" alt=""></a>
             </div>
-            <p class="text-center text-muted pt-1 mt-2 footer-list">Terms & Conditions</p>
+            <p class="text-center pt-2 mt-2"><a  asp-controller="home" asp-action="TermsAndCondition" class="text-decoration-none  text-muted  footer-list"> Terms & Conditions</a></p>
         </div>
     </footer> 
     }
