--- a/Views/Home/YourOrders.cshtml
+++ b/Views/Home/YourOrders.cshtml
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
         <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/img/logo.png" class="me-3 mb-2"
+            <img src="~/img/logo.png" class="logo-img mb-2"
                  style="width: 3rem; height: 3rem;" alt="">Store To Door
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -119,7 +119,7 @@
  <section class="my-5 py-5">
         <div class="container">
           <div class="text-center my-5">
-            <span class="font1 text-rose fw-bold heading  m-auto  bottom-rose border-3">
+            <span class="font1 text-rose fw-bold heading  m-auto border-bottom border-dark border-3">
             Your  Order History
             </span>
           </div>
