--- a/wwwroot/css/project.css
+++ b/wwwroot/css/project.css
@@ -1,4 +1,4 @@
-/* *{ 
+ /* *{ 
     border: 2px solid red;
 }  */
 /* Colors using variables */
@@ -75,6 +75,9 @@
 .bg-green {
     background-color: var(--green);
 }
+.bg-rose{
+    background-color:var(--rose);
+}
 /* border-color */
 .border-pink {
     border: 1px solid var(--light-pink);
@@ -102,9 +105,6 @@
 
 .bottom-pink, .item-6:hover {
     border-bottom: 3px solid var(--pink);
-}
-.bottom-rose {
-    border-bottom: 2px solid var(--rose);
 }
 /* nav */
 .navbar {
@@ -159,6 +159,9 @@
     padding: 0;
     width: 0rem;
 }
+.logo-img{
+    margin-right:1rem;
+}
 /* Carousal */
 .btn1:hover, .btn2:hover {
     background-color: rgb(58, 57, 57);
@@ -171,22 +174,27 @@
     background-size: cover;
 }
 
-    .bg > .container, .btn1 {
-        transform: translate(-45%,-90%);
-    }
-
-.heading-text {
-    position: absolute;
-    top: 28rem;
-    left: 70rem;
+.bg>.bg2, .btn1 {
+   transform: translate(-49%,-90%);
 }
 
+.bg>.bg1, .btn1 {
+   transform: translate(-62%,-55%);
+   text-align: end;
+} 
+/*.heading-text {
+    transform: translate(-10%,-50%) !important;
+    position: absolute;
+    top: 20rem;
+    left: 43.1rem;
+} */
+
 .container > h1 {
-    font-size: 5.8rem;
+    font-size: 5.2rem;
 }
 
 .btn1 {
-    left: 14rem;
+    left: 8rem;
     top: 2rem;
 }
 /* Section 1 */
@@ -215,7 +223,7 @@
 }
 
 .search2:focus {
-    border: 2px solid pink;
+scrollbar-3dlight-color    border: 2px solid pink;
 }
 
 .error-page {
@@ -234,10 +242,32 @@
 .container-fluid {
     padding-left: 0;
 }
-@media screen and (min-width:100px) and (max-width: 450px) {
+.new-address:focus, new-address:checked {
+    border: 1px solid var(--rose);
+}
+.new-address:checked {
+    background-color: var(--rose);
+}
+@media screen and (min-width:250px) and (max-width: 450px) {
     .text-box {
         display: flex;
         flex-direction: column;
+    }
+
+    .btn1 {
+        left: 6rem;
+    }
+    .container > h1 {
+        font-size: 4.2rem;
+    }
+    .bg > .bg2, .btn1 {
+        transform: translate(-49%,-74%);
+    }
+    .logo-img {
+        margin-right: 0rem;
+    } 
+    .logout{
+        display:none;
     }
 }
 
@@ -246,12 +276,9 @@
         display: flex;
         justify-content: space-around;
     }
-
-    /*.heading-text {
-        position: absolute;
-        top: 28rem;
-        left: 83.1rem;
-    }*/
+    .logout-offcanvas {
+        display: none;
+    }
 }
 
 @media screen and (min-width:200px) and (max-width: 990px) {
@@ -263,7 +290,11 @@
         text-align: center;
     }
 
-        .error-page > img {
+    .error-page > img {
             height: 14rem;
-        }
+    }
+    .bg > .bg1, .btn1 {
+        transform: translate(-49%,-55%);
+        text-align: end;
+    } 
 }
