--- a/Views/Home/EditUserProfile.cshtml
+++ b/Views/Home/EditUserProfile.cshtml
@@ -6,9 +6,6 @@
 @{
     ViewBag.HideFooter = true;
 }
-@{
-    ApplicationUser user = ViewBag.loggedInUser;
-}
 <section>
     <div class="container-fluid">
         <div class="row">
@@ -19,13 +16,14 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                 <div class="container pt-4 text-center">
-                    <a class="navbar-brand font1 text-dark fw-bold fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="~/img/logo.png"
-                             class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Edit Profile
+                    <a class="navbar-brand font1 text-dark fw-bold fs-1 heading" asp-area="" asp-controller="Home"
+                        asp-action="Index">
+                        <img src="~/img/logo.png" class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Edit
+                        Profile
                     </a>
                 </div>
                 <div>
-                    
+
                 </div>
                 <form method="post">
                     <div class="container d-flex justify-content-center" style="width: fit-content;">
@@ -33,56 +31,66 @@
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <label for="name" class="form-label">First name</label>
-                                <input type="text" class="form-control" id="name"  >
+                                <input type="text" class="form-control" id="name" name="FirstName"
+                                    value="@ViewBag.loggedInUser.FirstName">
                                 <span class="text-danger"></span>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <label for="name" class="form-label">Last name</label>
-                                <input type="text" class="form-control" id="name">
+                                <input type="text" class="form-control" id="name" name="LastName"
+                                    value="@ViewBag.loggedInUser.LastName">
                                 <span class="text-danger"></span>
                             </div>
                             <div>
                                 <div class="row py-2">
                                     <div>
                                         <label for="inputEmail" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="inputEmail">
+                                        <input type="email" class="form-control" id="inputEmail" name="Email"
+                                            value="@ViewBag.loggedInUser.Email">
                                         <span class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row py-2">
                                     <div>
-                                        <label for="inputEmail" class="form-label">Phone number</label>
-                                        <input type="email" class="form-control" id="inputEmail">
+                                        <label for="PhoneNumber" class="form-label">Phone number</label>
+                                        <input type="tel" class="form-control" id="PhoneNumber" name="PhoneNumber"
+                                            value="@ViewBag.loggedInUser.PhoneNumber">
                                         <span class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row py-2">
                                     <div>
                                         <label for="inputAddress" class="form-label">Address</label>
-                                        <input type="text" class="form-control" id="inputAddress">
+                                        <input type="text" class="form-control" id="inputAddress" name="Address"
+                                            value="@ViewBag.loggedInUser.Address">
                                         <span class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row py-2">
                                     <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                         <label for="inputcity" class="form-label">City</label>
-                                        <input type="text" class="form-control" id="inputCity">
+                                        <input type="text" class="form-control" id="inputCity" name="City"
+                                            value="@ViewBag.loggedInUser.City">
                                         <span class="text-danger"></span>
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                         <label for="inputState" class="form-label">State</label>
-                                        <input type="text" class="form-control" id="inputState">
+                                        <input type="text" class="form-control" id="inputState" name="State"
+                                            value="@ViewBag.loggedInUser.State">
                                         <span class="text-danger"></span>
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                                         <label for="inputPincode" class="form-label">Pincode</label>
-                                        <input type="text" class="form-control" id="inputPincode">
+                                        <input type="text" class="form-control" id="inputPincode" name="Pincode"
+                                            value="@ViewBag.loggedInUser.PinCode">
                                         <span class="text-danger"></span>
                                     </div>
                                 </div>
 
                                 <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
-                                    <a href="" class="btn btn-primary rounded-pill shadow-none">Save Changes</a>
+                                    @* <a href="" class="btn btn-primary rounded-pill shadow-none">Save Changes</a> *@
+                                    <button type="submit" class="btn btn-primary rounded-pill shadow-none">Save
+                                        Changes</button>
                                 </div>
                             </div>
                         </div>
