--- a/Views/Home/EditArtistProfile.cshtml
+++ b/Views/Home/EditArtistProfile.cshtml
@@ -1,42 +1,45 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Edit Artist Profile";
 }
-@{ 
+@{
     ViewBag.HideFooter = true;
 }
 
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
-                <div class=" position-sticky">
-                    <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
-                </div>
+<section class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
+            <div class=" position-sticky">
+                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                <div class="container pt-4 text-center">
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand font1 text-dark fw-bold fs-1 heading">
-                        <img src="~/img/logo.png"
-                             class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Edit Profile
-                    </a>
-                </div>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+            <div class="container pt-4 text-center">
+                <a asp-area="" asp-controller="Home" asp-action="Index"
+                    class="navbar-brand font1 text-dark fw-bold fs-1 heading">
+                    <img src="~/img/logo.png" class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Edit Profile
+                </a>
+            </div>
+            <form method="post">
                 <div class="container" style="width: fit-content;">
                     <div class="row py-2">
                         <div>
                             <label for="name" class="form-label">Account name</label>
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" name="AccountName"
+                                value="@ViewBag.loggedInUser.UserName">
                         </div>
                     </div>
                     <div class="row py-2">
                         <div>
                             <label for="inputEmail" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="inputEmail">
+                            <input type="email" class="form-control" id="inputEmail" name="Email"
+                                value="@ViewBag.loggedInUser.Email">
                         </div>
                     </div>
                     <div class="row py-2">
                         <div>
                             <label for="inputNumber" class="form-label">Phone number</label>
-                            <input type="email" class="form-control" id="inputNumber">
+                            <input type="tel" class="form-control" id="inputNumber" name="PhoneNumber"
+                                value="@ViewBag.loggedInUser.PhoneNumber">
                         </div>
                     </div>
                     <div class="row py-2">
@@ -52,13 +55,15 @@
                             <label for="exampleFormControlTextarea1" class="form-label">
                                 Artist Bio
                             </label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                name="Bio">@ViewBag.loggedInUser.Bio</textarea>
                         </div>
                     </div>
                     <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
-                        <a href="" class="btn btn-primary rounded-pill shadow-none">Save Changes</a>
+                        <button type="submit" class="btn btn-primary rounded-pill shadow-none">Save Changes</button>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
-    </section>
+    </div>
+</section>
