--- a/Views/Home/ArtistProfile.cshtml
+++ b/Views/Home/ArtistProfile.cshtml
@@ -9,55 +9,61 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
         <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/img/logo.png" class="logo-img mb-2"
-                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+            <img src="~/img/logo.png" class="logo-img mb-2" style="width: 3rem; height: 3rem;" alt="">Store To Door
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
-                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page" asp-area=""
+                        asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
-                
-               <li class="nav-item">
+
+                <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-                </li> 
+                </li>
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
+
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
                     {
                         <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                        </ul>
-                    </li>}
-                }else{
+                            <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                                SHOP
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                        Medium</a></li>
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                        Artist</a></li>
+                            </ul>
+                        </li>
+                    }
+                }
+                else
+                {
                     <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                             SHOP
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                    Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                    Artist</a></li>
                         </ul>
                     </li>
                 }
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown"
+                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
                     <partial name="_LoginPartial" />
@@ -80,17 +86,19 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
-                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                        </li>}
+
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        </li>
+                    }
                 }
                 else
                 {
                     <li class="nav-item">
                         <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                        </li>
+                    </li>
                 }
 
                 @if (User.Identity.IsAuthenticated)
@@ -99,49 +107,68 @@
                     {
                         <li class="nav-item">
                             <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
-                </li> }}
-                 @if (User.Identity.IsAuthenticated)
+                        </li>
+                    }
+
+                }
+                @if (User.Identity.IsAuthenticated)
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
-                </li> }}
+                            <a asp-controller="home" asp-action="ArtistProfile"
+                        class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
+                        </li>
+                    }
+
+                }
             </ul>
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
                 <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+                    href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
             </div>
         </div>
     </div>
 </nav>
-  <section class="sec4 py-5" id="artist-profile">
-        <div class="container pt-3">
-            <div class="row my-5 pt-3">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
-                    <img src="~/img/new_artist.png" class="border rounded-circle img-fluid" alt=""
-                        style="height: 220px; width: 220px;">
-                </div>
-                <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative mt-4">
-                    <h2 class=" font2">Add Name</h2>
-                    <p class="my-3  text-wrap">Add Bio</p>
-                    <form class="d-flex">
-                    
-                        <a asp-controller="home" asp-action="EditArtistProfile" class="btn shadow-none btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2 ">Edit Profile</a>
-                        <a asp-controller="home" asp-action="UploadArtwork" class="btn btn3 shadow-none border-pink text-pink ms-1 me-4 px-3 rounded text-decoration-none font2 ">Upload Artwork</a>
-                    </form>     
-                </div>
+<section class="sec4 py-5" id="artist-profile">
+    <div class="container pt-3">
+        <div class="row my-5 pt-3">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
+                <img src="~/img/new_artist.png" class="border rounded-circle img-fluid" alt=""
+                    style="height: 220px; width: 220px;">
             </div>
-            <table class="table bg-white shadow-sm text-pink ">
-                <thead>
-                    <tr>
-                        <th scope="col" class="fs-3 font2 ps-5">Collections</th>
-                    </tr>
-                </thead>
-            </table>
-            <div class="my-5 py-5">
-                <p class="text-center">You have not uploaded any images</p>
+            <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative mt-4">
+                <h2 class=" font2">@ViewBag.loggedInUser.UserName</h2>
+                @if (ViewBag.loggedInUser.Bio == "")
+                {
+                    <p class="my-3 text-wrap">No Bio</p>
+                }
+                else
+                {
+                    <p class="my-3 text-wrap">@ViewBag.loggedInUser.Bio</p>
+                }
+
+                <form class="d-flex">
+
+                    <a asp-controller="home" asp-action="EditArtistProfile"
+                        class="btn shadow-none btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2 ">Edit
+                        Profile</a>
+                    <a asp-controller="home" asp-action="UploadArtwork"
+                        class="btn btn3 shadow-none border-pink text-pink ms-1 me-4 px-3 rounded text-decoration-none font2 ">Upload
+                        Artwork</a>
+                </form>
             </div>
         </div>
-    </section>
+        <table class="table bg-white shadow-sm text-pink ">
+            <thead>
+                <tr>
+                    <th scope="col" class="fs-3 font2 ps-5">Collections</th>
+                </tr>
+            </thead>
+        </table>
+        <div class="my-5 py-5">
+            <p class="text-center">You have not uploaded any images</p>
+        </div>
+    </div>
+</section>
