--- a/Views/Home/EditArtistProfile.cshtml
+++ b/Views/Home/EditArtistProfile.cshtml
@@ -25,7 +25,7 @@
                         <div>
                             <label for="name" class="form-label">Account name</label>
                             <input type="text" class="form-control" id="name" name="AccountName"
-                                value="@ViewBag.loggedInUser.UserName">
+                                value="@ViewBag.loggedInUser.AccountName">
                         </div>
                     </div>
                     <div class="row py-2">
