--- a/Views/Home/Address.cshtml
+++ b/Views/Home/Address.cshtml
@@ -14,15 +14,17 @@
             </div>
             <div class="row  shadow-sm mt-3 mb-5 p-3 mx-5">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12 my-1">
-                    <h5>Raghav Sharma</h5>
-                    <p>Akhnoor Jammu</p>
-                    <p>JAMMU , JAMMU & KASHMIR</p>
-                    <p>India</p>
+                  <p class="lh-1">Raghav Sharma</p>
+                <p class="lh-1">Lane no. 12</p>
+                <p class="lh-1">Akhnoor</p>
+                <p class="lh-1">Jammu ,Jammu & Kashmir 180002</p>
+                <p class="lh-1">India</p>  
+                <p class="lh-1">Phone: 0123456789</p>
                     <a  asp-controller="home" asp-action="Payment"
                         class="btn border-0 col-12 col-lg-4 col-sm-12 col-md-6 text-white bg-rose  btn-sm fs-6 px-5 py-2 font2 rounded text-decoration-none shadow-none">Deliver
                         to this address</a>
                     <div>
-                        <a asp-controller="home" asp-action="UserEditProfile" class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-5 mt-3">Edit</a>
+                        <a asp-controller="home" asp-action="EditUserProfile" class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-5 mt-3">Edit</a>
                         <a  class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-6 mt-3">Delete </a>
                     </div>
                 </div>
