--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -21,12 +21,12 @@
             <a href="" class="btn border-0 btn-outline-dark mx-2 px-5 font2 ">User List</a>
             <a href="" class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Artist List</a>
             <a href="" class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Message box</a>
-            <a href="" class="btn border-0 logout-offcanvas btn-outline-dark  px-5 mx-2 font2 ">Logout</a>
+            @*<a href="" class="btn border-0 logout-offcanvas btn-outline-dark  px-5 mx-2 font2 ">Logout</a>*@
           </div>
         </div>
       </div>
-      <form class="d-flex">
+     @* <form class="d-flex">
         <a href="" class="btn logout btn-outline-dark position-relative btn-sm mx-2 px-3 font2 ">Logout</a>
-      </form>
+      </form>*@
     </div>
   </nav>
