--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,10 +12,8 @@
 <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
-                <div class=" position-sticky">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">  
                     <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
-                </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                 <div class="container pt-4 text-center">
@@ -79,7 +77,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-2 pb-5 ">
+                                <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-2">
                                     <button id="registerSubmit" type="submit"
                                         class="btn btn-primary rounded-pill shadow-none btn-primary">Create Account</button>
                                 </div>
