--- a/Views/Home/Address.cshtml
+++ b/Views/Home/Address.cshtml
@@ -1,7 +1,122 @@
 ﻿@{
     ViewData["Title"] = "Address";
 }
-   <section class="my-5">
+@using Microsoft.AspNetCore.Identity
+@using StoreToDoor.Data
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
+    <div class="container-fluid py-0">
+        <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
+            <img src="~/img/logo.png" class="logo-img mb-2"
+                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
+                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                </li>
+                
+               <li class="nav-item">
+                    <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
+                </li> 
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
+                    
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link font2  mx-2 item-3 text-white"
+                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            SHOP
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                        </ul>
+                    </li>}
+                }else{
+                    <li class="nav-item dropdown">
+                            <a class="nav-link font2  mx-2 item-3 text-white"
+                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            SHOP
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                        </ul>
+                    </li>
+                }
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        PROFILE
+                    </a>
+                    <partial name="_LoginPartial" />
+                    <!--  <ul class="dropdown-menu width" aria-labelledby="navbarDropdown">
+                        <li class="ms-3 font2 fs-5 pt-2">WELCOME!</li>
+                        <li class="ms-3 mb-2">To access account and manage order</li>
+                        <form class="d-flex">
+                      <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-danger ms-4 me-1 px-3 mb-2">Signup</a>
+                        <a asp-area="Identity" asp-page="/Account/login" class="btn btn-outline-danger me-4 ms-1 px-3 mb-2">Login</a>
+                          <a class="btn btn-outline-danger ms-4 me-1 px-5 mb-2">Logout</a>
+                        </form>
+                         <li>
+                          <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item drop2" asp-controller="Home" asp-action="Order">Orders</a></li>
+                        <li><a class="dropdown-item drop2"  asp-controller="Home" asp-action="Wishlist">Wishlist</a></li>
+                        <li><a class="dropdown-item drop2" asp-controller="Home" asp-action="Contact">Contact Us</a></li>
+                      </ul> -->
+                </li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
+                    
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
+                        </li>}
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
+                        </li>
+                }
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
+                </li> }}
+                 @if (User.Identity.IsAuthenticated)
+                {
+                    @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
+                </li> }}
+            </ul>
+            <div class="nav-item search-box rounded-pill bg-dark ms-3">
+                <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
+                <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
+                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+            </div>
+        </div>
+    </div>
+</nav>
+<section class="my-5 py-5">
         <div class="container">
             <div class="text-center my-5">
                 <span class="font1 text-rose fw-bold heading  m-auto border-bottom border-dark border-3">
@@ -9,8 +124,7 @@
                 </span>
                 <h6 class="font2 my-5">Is the address you'd like to use displayed below? If so, click the corresponding
                     "Deliver to this address" button Or you can enter <span class="text-rose">a
-                        new delivery
-                        address</span> </h6>
+                        new delivery address</span> </h6>
             </div>
             <div class="row  shadow-sm mt-3 mb-5 p-3 mx-5">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12 my-1">
@@ -66,11 +180,11 @@
                                 </label>
                             </div>
                             <div class="d-grid gap-2 col-sm-8  pt-4 pb-5 ">
-                                <a href="" class="btn bg-rose text-white shadow-none">Use this address</a>
+                                <a class="btn bg-rose text-white shadow-none">Use this address</a>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
             </div>
-    </section>
+</section>
