--- a/Views/Home/CustomArtRequest.cshtml
+++ b/Views/Home/CustomArtRequest.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Artist Profile";
+    ViewData["Title"] = "Custom Art Requests";
 }
 @using Microsoft.AspNetCore.Identity
 @using StoreToDoor.Data
@@ -131,53 +131,59 @@
         </div>
     </div>
 </nav>
-<section class="sec4 py-5" id="artist-profile">
-    <div class="container pt-3">
-        <div class="row my-5 pt-3">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
-                <img src="~/img/new_artist.png" class="border rounded-circle img-fluid" alt=""
-                    style="height: 220px; width: 220px;">
+ <section class="my-5 py-5">
+        <div class="container">
+            <div class="text-center my-5">
+                <span class="font1 text-rose fw-bold heading  m-auto  border-3 border-bottom border-dark">
+                   Custom Art Requests
+                </span>
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative mt-4">
-                @if (ViewBag.loggedInUser.AccountName == "")
-                {
-                    <h2 class=" font2">Account Name not Set</h2>
-                }
-                else
-                {
-                    <h2 class=" font2">@ViewBag.loggedInUser.AccountName</h2>
-                }
-                
-                @if (ViewBag.loggedInUser.Bio == "")
-                {
-                    <p class="my-3 text-wrap">No Bio</p>
-                }
-                else
-                {
-                    <p class="my-3 text-wrap">@ViewBag.loggedInUser.Bio</p>
-                }
-
-                <form class="d-flex">
-
-                    <a asp-controller="home" asp-action="EditArtistProfile"
-                        class="btn shadow-none btn3 border-pink text-pink me-1 px-3 rounded text-decoration-none font2 ">Edit
-                        Profile</a>
-                    <a asp-controller="home" asp-action="UploadArtwork"
-                        class="btn btn3 shadow-none border-pink text-pink ms-1 me-2 px-3 rounded text-decoration-none font2 ">Upload
-                        Artwork</a>
-                     <a asp-controller="home" asp-action="CustomArtRequest" class="btn btn3 shadow-none border-pink text-pink me-4 px-3 rounded text-decoration-none font2 ">Custom Art Requests</a>
-                </form>
+            <div class="row border border-1 my-3 shadow p-3 text-center">
+                <div class="col-lg-1 col-md-1  my-1">
+                    <button type="button" class="btn-close shadow-none" aria-label="Close"></button>
+                </div>
+                <div class="col-lg-2 col-md-3 my-1">
+                    <img src="~/img/painting4.jpg" style="height: 6rem; width: 6rem;" alt="">
+                </div>
+                <div class="col-lg-3 col-md-3  my-1">
+                    <span class="font2 fs-6 d-block">From Dikshant Chopra</span>
+                </div> 
+                <div class="col-lg-3 col-md-3 my-1">
+                    <label for="exampleFormControlTextarea1" class="form-label">
+                        Customization details
+                       </label>
+                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="col-lg-3 col-md-2 my-1">
+                    <label for="exampleFormControlTextarea1" class="form-label">
+                      Reply
+                     </label>
+                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
             </div>
+            <div class="row border border-1 my-3 shadow p-3 text-center">
+                <div class="col-lg-1 col-md-1  my-1">
+                    <button type="button" class="btn-close shadow-none" aria-label="Close"></button>
+                </div>
+                <div class="col-lg-2 col-md-3 my-1">
+                    <img src="~/img/sketch1.jpg" style="height: 6rem; width: 6rem;" alt="">
+                </div>
+                <div class="col-lg-3 col-md-3  my-1">
+                    <span class="font2 fs-6 d-block">From Raghav Sharma</span>
+                </div> 
+                <div class="col-lg-3 col-md-3 my-1">
+                    <label for="exampleFormControlTextarea1" class="form-label">
+                        Customization details
+                       </label>
+                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="col-lg-3 col-md-2 my-1">
+                    <label for="exampleFormControlTextarea1" class="form-label">
+                      Reply
+                     </label>
+                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+                      <a class="border-0 bg-rose float-end text-white btn-sm my-3 mx-2 px-5 py-2 font2 rounded text-decoration-none">Send</a>
         </div>
-        <table class="table bg-white shadow-sm text-pink ">
-            <thead>
-                <tr>
-                    <th scope="col" class="fs-3 font2 ps-5">Collections</th>
-                </tr>
-            </thead>
-        </table>
-        <div class="my-5 py-5">
-            <p class="text-center">You have not uploaded any images</p>
-        </div>
-    </div>
-</section>
+    </section>
