--- a/Views/Home/OrderPlaced.cshtml
+++ b/Views/Home/OrderPlaced.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Your Order History";
+    ViewData["Title"] = "Place Your Order";
 }
 @using Microsoft.AspNetCore.Identity
 @using StoreToDoor.Data
@@ -56,7 +56,7 @@
                 }
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown" role="button"
+                    <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
@@ -83,13 +83,13 @@
                     
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
                         </li>}
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
                         </li>
                 }
 
@@ -117,72 +117,20 @@
     </div>
 </nav>
  <section class="my-5 py-5">
-        <div class="container">
-          <div class="text-center my-5">
-            <span class="font1 text-rose fw-bold heading  m-auto border-bottom border-dark border-3">
-            Your  Order History
-            </span>
-          </div>
-          <div class="row border border-1 my-3 shadow p-3 text-center">
-               <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none order-close" aria-label="Close"></button>
+        <div class="shadow-sm row py-5 my-5 mb-5 p-3 mx-5">
+            <span class="font2 fs-3 text-dark-green"><img src="~/img/delivered.png" style="height: 1rem;" class="mb-1"
+                    alt=""> Order placed, Thank you!</span>
+            <div class="col-lg-10 mt-3">
+                <p><span class="fw-bold">Shipping to Raghav Sharma </span> , Lane no. 12 Akhnoor , Jammu ,
+                    Jammu & Kashmir 180002</p>
+                <div class="col-lg-2">
+                    <img src="~/img/Painting1.jpg" class="my-3" style="height: 6rem; width: 6rem;" alt="">
+
                 </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/sketch1.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-2 col-md-3  my-1">
-                    <span class="font2 fs-5 d-block">Sketch</span>
-                    <span class="font2 fs-6 text-muted d-block">By Craftiness</span>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <span class="font2">Rs 500</span>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <span class="font2 fs-6 d-block"><img src="~/img/delivered.png" style="height: 0.8rem;" class="mb-1"
-                            alt=""> Delivery Date: 20 March 2022</span>
-                    <span class="font2 fs-6 text-muted d-block">Your item is on the way</span>
-                     <a asp-controller="home" asp-action="CancelOrderRequest" class="text-dark fs-6 font2 text-decoration-none">Cancel order ></a>
+                <div class="col-lg-10 py-2">
+                    <p>Delivery Date: Tuesday, 2 March</p>
+                   <a asp-controller="home" asp-action="YourOrders" class="text-dark-green text-decoration-none fs-5">Go to your orders ></a>
                 </div>
             </div>
-            <div class="row border border-1 shadow my-3 p-3 text-center">
-               <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none order-close" aria-label="Close"></button>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/Painting1.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-2 col-md-3 my-1">
-                    <span class="font2 fs-5 d-block">Canvas painting</span>
-                    <span class="font2 fs-6 text-muted d-block">By Handmade Creations</span>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <span class="font2">Rs 400</span>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <span class="font2 fs-6 d-block"><img src="~/img/cancelled.png" style="height: 0.8rem;" class="mb-1"
-                            alt=""> Cancelled on: 2 March, 2022</span>
-                    <span class="font2 fs-6 text-muted d-block">Ordered by Mistake</span>
-                </div>
-            </div>
-            <div class="row border border-1 my-3 shadow p-3 text-center">
-                <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none order-close" aria-label="Close"></button>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/painting2.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-2 col-md-3 my-1">
-                    <span class="font2 fs-5 d-block">Watercolor Painting</span>
-                    <span class="font2 fs-6 text-muted d-block">By Craft World</span>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <span class="font2">Rs 500</span>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <span class="font2 fs-6 d-block"><img src="~/img/delivered.png" style="height: 0.8rem;" class="mb-1"
-                            alt=""> Delivered on: 3 March 2022</span>
-                    <span class="font2 fs-6 text-muted d-block">Your item has been delivered</span>
-                </div>
-            </div>     
-         </div>
+        </div>
     </section>
