--- a/Views/Home/ReviewOrder.cshtml
+++ b/Views/Home/ReviewOrder.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Your Order History";
+    ViewData["Title"] = "Review Your Order";
 }
 @using Microsoft.AspNetCore.Identity
 @using StoreToDoor.Data
@@ -56,7 +56,7 @@
                 }
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown" role="button"
+                    <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
@@ -83,13 +83,13 @@
                     
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
                         </li>}
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
                         </li>
                 }
 
@@ -116,73 +116,52 @@
         </div>
     </div>
 </nav>
- <section class="my-5 py-5">
+<section class="my-5 py-5">
         <div class="container">
-          <div class="text-center my-5">
-            <span class="font1 text-rose fw-bold heading  m-auto border-bottom border-dark border-3">
-            Your  Order History
-            </span>
-          </div>
-          <div class="row border border-1 my-3 shadow p-3 text-center">
-               <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none order-close" aria-label="Close"></button>
+            <div class="text-center my-5">
+                <span class="font1 text-orange fw-bold heading  m-auto border-bottom border-dark border-3">
+                    Review Your Order
+                </span>
+            </div>
+            <div class="shadow row  mt-3 mb-5 p-3 mx-5">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12 my-2">
+                    <h5 class="mb-3">Shipping Address <a asp-controller="home" asp-action="Address"
+                            class="ms-2 fs-5 text-orange">Change</a></h5>
+                    <p class="lh-1">Raghav Sharma</p>
+                    <p class="lh-1">Lane no. 12</p>
+                    <p class="lh-1">Akhnoor</p>
+                    <p class="lh-1">Jammu ,Jammu & Kashmir 180002</p>
+                    <p class="lh-1">India</p>
+                    <p class="lh-1">Phone: 0123456789</p>
                 </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/sketch1.jpg" style="height: 6rem; width: 6rem;" alt="">
+                <div class="col-lg-4 col-md-12 col-sm-12 col-12 my-2">
+                    <h5 class="mb-3">Payment Method <a asp-controller="home" asp-action="Payment"
+                            class="ms-2 fs-5 text-orange">Change</a></h5>
+                    <p class="lh-1">Pay on delivery (Cash / Card)</p>
                 </div>
-                <div class="col-lg-2 col-md-3  my-1">
-                    <span class="font2 fs-5 d-block">Sketch</span>
-                    <span class="font2 fs-6 text-muted d-block">By Craftiness</span>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <span class="font2">Rs 500</span>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <span class="font2 fs-6 d-block"><img src="~/img/delivered.png" style="height: 0.8rem;" class="mb-1"
-                            alt=""> Delivery Date: 20 March 2022</span>
-                    <span class="font2 fs-6 text-muted d-block">Your item is on the way</span>
-                     <a asp-controller="home" asp-action="CancelOrderRequest" class="text-dark fs-6 font2 text-decoration-none">Cancel order ></a>
+                <div class="col-lg-4 col-md-12 col-sm-12 col-12 my-2">
+                    <h5 class="mb-3">Order summary</h5>
+                    <p class="lh-1">Items: <span class="float-end">Rs 400</span> </p>
+                    <p class="lh-1">Delivery: <span class="float-end">Rs 40</span></p>
+                    <p class="lh-1">Total: <span class="float-end">Rs 440</span></p>
+                    <a asp-controller="home" asp-action="OrderPlaced" class="border-0 col-12 col-lg-12 col-sm-12 col-md-12 text-white bg-orange btn-lg float-end text-center mt-3 fs-6 px-5 font2  text-decoration-none shadow-none">Place
+                    order</a>
                 </div>
             </div>
-            <div class="row border border-1 shadow my-3 p-3 text-center">
-               <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none order-close" aria-label="Close"></button>
+            <div class="shadow row  mt-3 mb-5 p-3 mx-5">
+                <h5 class=" text-orange">Delivery Date: 2 March 2022</h5>
+                <div class="col-lg-2">
+                    <img src="~/img/Painting1.jpg" class="my-3" style="height: 6rem; width: 6rem;" alt="">
                 </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/Painting1.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-2 col-md-3 my-1">
-                    <span class="font2 fs-5 d-block">Canvas painting</span>
-                    <span class="font2 fs-6 text-muted d-block">By Handmade Creations</span>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <span class="font2">Rs 400</span>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <span class="font2 fs-6 d-block"><img src="~/img/cancelled.png" style="height: 0.8rem;" class="mb-1"
-                            alt=""> Cancelled on: 2 March, 2022</span>
-                    <span class="font2 fs-6 text-muted d-block">Ordered by Mistake</span>
+                <div class="col-lg-10 mt-3">    
+                    <p class="lh-1">Painting on stretched canvas</p>
+                    <p class="lh-1">Finished edges </p>
+                    <p class="lh-1"> Ready to hang</p>
+                    <p class="lh-1"> 20'' h x 16'' w x .75'' d 1 lbs. 1 oz</p>
+                    <p class="lh-1">PRICE - Rs 400 </p>
+                    <p class="lh-1">Quantity:1  <a asp-controller="home" asp-action="Cart"
+                        class="ms-2 fs-6 text-orange">Change</a></p>
                 </div>
             </div>
-            <div class="row border border-1 my-3 shadow p-3 text-center">
-                <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none order-close" aria-label="Close"></button>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/painting2.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-2 col-md-3 my-1">
-                    <span class="font2 fs-5 d-block">Watercolor Painting</span>
-                    <span class="font2 fs-6 text-muted d-block">By Craft World</span>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <span class="font2">Rs 500</span>
-                </div>
-                <div class="col-lg-3 col-md-3 my-1">
-                    <span class="font2 fs-6 d-block"><img src="~/img/delivered.png" style="height: 0.8rem;" class="mb-1"
-                            alt=""> Delivered on: 3 March 2022</span>
-                    <span class="font2 fs-6 text-muted d-block">Your item has been delivered</span>
-                </div>
-            </div>     
-         </div>
-    </section>
+        </div>
+</section>
