--- a/Views/Shared/_RolePartial.cshtml
+++ b/Views/Shared/_RolePartial.cshtml
@@ -16,6 +16,7 @@
 else{
          <li><a class="dropdown-item drop2" asp-controller="home" asp-action="EditUserProfile">Edit Profile</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="YourOrders">Orders</a></li>
+        <li><a class="dropdown-item drop2" asp-controller="home" asp-action="YourCustomRequest">Your Art Requests</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Wishlist">Wishlist</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ContactUs">Contact Us</a></li> 
     }
